Diseño de pantalla de inicio hecha

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Signum</string>
     <string name="imageDescription">Descripcion de imagen</string>
+    <string name="login">Iniciar sesion</string>
+    <string name="register">Registrarse</string>
+    <string name="empty" />
 </resources>
