Creado item del diccionario

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="learn">Aprende</string>
     <string name="explore">Explorar</string>
     <string name="placehoalderExplore">Introduce una palabra para buscar…</string>
+    <string name="exampleText">Ejemplo de texto</string>
 </resources>
