Creado diseño de pantalla de categoria

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="explore">Explorar</string>
     <string name="placehoalderExplore">Introduce una palabra para buscar…</string>
     <string name="exampleText">Ejemplo de texto</string>
+    <string name="categori">Categori</string>
 </resources>
