--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="placehoalderExplore">Introduce una palabra para buscar…</string>
     <string name="exampleText">Ejemplo de texto</string>
     <string name="categori">Categori</string>
+    <string name="longTextExample">En un día soleado, decidí salir a caminar y disfrutar del aire fresco y la naturaleza.</string>
 </resources>
