--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="birthDate">Fecha de nacimiento</string>
     <string name="birthDateSuggestion">Selecciona tu fecha de nacimiento…</string>
     <string name="save">Guardar</string>
+    <string name="successUpdate">Actualizado correctamente</string>
 </resources>
